functional random card

--- a/src/Css/NavBar.css
+++ b/src/Css/NavBar.css
@@ -1,6 +1,6 @@
 .mainDivNav {
-    background-color: #282c34;
-    color: #00cf77;
+    background-color: #00cf77;
+    color: #282c34;
     height: 5%;
     display: flex;
     align-items: center;
