--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 .divRandom {
   background-color:  #434343 ;
   width: 100%;
-  height: 95%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
