many changes in card component

--- a/src/Css/CardFinder.css
+++ b/src/Css/CardFinder.css
@@ -29,6 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #434343;
+    background-color: #232323;
     width: 100%;
+    flex-direction: column;
 }
