--- a/src/Css/NavBar.css
+++ b/src/Css/NavBar.css
@@ -1,5 +1,5 @@
 .mainDivNav {
-    background-color: #00cf77;
+    background-color: #434343;
     color: #282c34;
     height: 5%;
     display: flex;
