--- a/src/Css/Card.css
+++ b/src/Css/Card.css
@@ -38,6 +38,22 @@
     margin-right: 3px;
 }
 
+.buyLink:link, .buyLink:visited {
+    background-color: #434343;
+    color: white;
+    border: 2px solid #00cf77;
+    border-radius: 15px;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+  
+.buyLink:hover, .buyLink:active {
+    background-color: #00cf77;
+    color: white;
+}
+
 p {
     color: white;
 }
