--- a/src/Css/RandomCard.css
+++ b/src/Css/RandomCard.css
@@ -14,9 +14,32 @@
     color: white;
     padding: 20px;
     font-size: larger;
+    transition: 500ms;
 }
 
 .refreshButton:hover {
     background-color: #00cf77;
-    color: black;
+}
+
+.cardContainer {
+    min-width: 60%;
+    margin: 50px;
+
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .loadingImage {
+        margin: 50px;
+        animation: logo-spin infinite 5s linear;
+        height: 200px;
+    }
+}
+
+@keyframes logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
 }
