--- a/src/Css/Card.css
+++ b/src/Css/Card.css
@@ -49,6 +49,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    margin-right: 5px;
 }
   
 .buyLink:hover, .buyLink:active {
