--- a/src/Css/Decks.css
+++ b/src/Css/Decks.css
@@ -18,3 +18,26 @@
     margin: 20px;
     padding: 30px;
 }
+
+.loggedMainDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.decksListDiv {
+    display: column;
+    width: 75%;
+}
+
+.decksSidebar {
+    background-color: #434343;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    margin: 20px;
+    padding: 30px;
+    width: 25%;
+}
