--- a/src/Css/Decks/DeckCreatorStatistics.css
+++ b/src/Css/Decks/DeckCreatorStatistics.css
@@ -38,3 +38,23 @@
     background-color: #00cf77;
     color: white;
 }
+
+.deckCreatorStatisticsButtonSelected {
+    background-color: #00cf77;
+    width: 100%;
+    height: 20%;
+    border: 1px solid #00cf77;
+    color: white;
+    padding: 0.5rem;
+    font-weight: bolder;
+    font-size: medium;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-radius: 10px;
+    transition: 200ms;
+}
+
+.deckCreatorStatisticsButtonSelected:hover {
+    background-color: transparent;
+    color: #00cf77
+}
