--- a/src/Css/Admin/PurchaseOrders.css
+++ b/src/Css/Admin/PurchaseOrders.css
@@ -93,12 +93,14 @@ padding-left: 1rem;
     color: #00cf77;
     font-size: xx-large;
     font-weight: 1000;
+    text-align: center;
 }
 
 .purchaseId {
     color: #00cf77;
     font-size: x-large;
     font-weight: 800;
+    text-align: center;
 }
 
 .purchaseOrderDeck {
@@ -146,4 +148,32 @@ padding-left: 1rem;
 .submitButtonDiv {
     padding-top: 1rem;
     width: 90%;
+}
+
+@media (width < 1200px) {
+    .mainPurchaseOrders {
+        flex-direction: column;
+        align-items: center;
+    }
+    .selectedPurchase {
+        margin-top: 1rem;
+        width: 60%;
+    }
+}
+
+@media (width < 550px) {
+    .purchasesList {
+        overflow-x: hidden;
+        width: 90%;
+        font-size: small;
+    }
+    .selectedPurchase {
+        width: 90%;
+    }
+    .noSelectedOrder {
+        font-size: large;
+    }
+    .purchaseId {
+        font-size: medium;
+    }
 }
