--- a/src/Css/CardFinder.css
+++ b/src/Css/CardFinder.css
@@ -1,6 +1,6 @@
 .finder {
     border-radius: 9999px;
-    width: 75vh;
+    width: 75%;
     margin-right: 20px;
     height: 30px;
     padding-left: 10px;
@@ -23,7 +23,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin: 20px;
 }
 
 .mainDivFinder {
@@ -34,6 +33,7 @@
     background-color: #232323;
     width: 100%;
     flex-direction: column;
+    margin-top: 2rem;
 }
 
 .divButtons {
@@ -66,7 +66,7 @@
 }
 
 .divResult {
-    width: 100vh;
+    width: 100%;
 }
 
 .divSelector {
