--- a/src/Css/MainPage.css
+++ b/src/Css/MainPage.css
@@ -99,3 +99,41 @@
     font-size: 2rem;
 }
 
+
+@media (width < 1100px) {
+    .contentDiv {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .mtgInfo {
+        width: 90%;
+        margin: 0px;
+        padding-bottom: 2.5rem;
+    }
+
+    .mtgInfo > * {
+        text-align: center;
+    }
+
+    .contactInfo {
+        width: 90%;
+        margin: 0px;
+        margin-top: 1rem;
+        padding: 20px;
+        align-items: center;
+    }
+
+    .contactInfo > p {
+        margin: 0px;
+    }
+
+    .title {
+        font-size: xx-large;
+    }
+
+    .bodyText {
+        font-size: medium;
+    }
+
+}
