--- a/src/Css/Card.css
+++ b/src/Css/Card.css
@@ -93,10 +93,7 @@
 
 .cardImg {
     max-width: 40vh;
-    height: 100%;
     margin-right: 20px;
-    min-height: 400px;
-    min-width: 282px;
 }
 
 .adminButtons > * {
@@ -107,10 +104,15 @@
     .mainDivCard {
         display: flex;
         flex-direction: column;
+        align-items: center;
         padding: 20px;
         background-color: #434343;
         border-radius: 25px;
         min-width: 60%;
         height: fit-content;
+    }
+
+    .cardImg {
+        margin: 0px;width: auto;
     }
 }
