--- a/src/Css/ShoppingCart/ShopingCart.css
+++ b/src/Css/ShoppingCart/ShopingCart.css
@@ -14,6 +14,7 @@
     font-weight: bolder;
     color: #00cf77;
     margin-top: 6rem;
+    text-align: center;
 }
 
 .fullCart {
@@ -155,4 +156,23 @@
 .divPurchaseCustomButton {
     width: 15%;
     margin-top: 1rem;
+}
+
+@media (width < 800px) {
+    .deckDivShoppingCart {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        font-size: small;
+    }
+
+    .divPurchaseCustomButton {
+        width: 100%;
+    }
+}
+
+@media (width < 500px) {
+    .itemInfo {
+        flex-direction: column;
+    }
 }
