--- a/src/Css/Admin/PurchaseOrders.css
+++ b/src/Css/Admin/PurchaseOrders.css
@@ -150,25 +150,40 @@ padding-left: 1rem;
     width: 90%;
 }
 
+.notAdmin {
+    font-weight: 1000;
+    font-size: xx-large;
+    color: #00cf77;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
 @media (width < 1200px) {
     .mainPurchaseOrders {
         flex-direction: column;
         align-items: center;
     }
+
+    .purchasesList {
+        width: 70%;
+    }
+
     .selectedPurchase {
         margin-top: 1rem;
-        width: 60%;
+        width: 70%;
     }
 }
 
 @media (width < 550px) {
     .purchasesList {
         overflow-x: hidden;
-        width: 90%;
+        width: 95%;
         font-size: small;
     }
     .selectedPurchase {
-        width: 90%;
+        width: 95%;
     }
     .noSelectedOrder {
         font-size: large;
