--- a/src/Css/Admin/Stock.css
+++ b/src/Css/Admin/Stock.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
-    padding-top: 4rem;
+    padding-top: 1rem;
 }
 
 .filtersDiv {
@@ -118,4 +118,49 @@
 
 .displayCards {
     width: 100%;
+}
+
+.notAdmin {
+    font-weight: 1000;
+    font-size: xx-large;
+    color: #00cf77;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+@media (width < 1200px) {
+    .stockMainDiv {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cardsDiv {
+        width: 90%;
+    }
+
+    .filtersDiv {
+        width: 90%;
+        margin-top: 1rem;
+    }
+}
+
+
+@media (width < 500px) {
+
+    .individualCard {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .individualCard > *  {
+        text-align: center;
+    }
+
+    .cardButtons {
+        margin-top: 0.3rem;
+        width: 100%;
+    }
+
 }
