added changes in decks to display selected card

--- a/src/Css/Decks.css
+++ b/src/Css/Decks.css
@@ -42,6 +42,10 @@
     width: 25%;
 }
 
+.decksSidebar .mainDivCard {
+    flex-direction: column;
+}
+
 .noDecksMessage {
     display: flex;
     flex-direction: column;
